edit admin user

--- a/src/app/admin/admin-main/admin-user/admin-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-user.component.html
@@ -1,28 +1,26 @@
-<div *ngIf="isQLND_01 || isQLND_02 || isQLND_03 || isQLND_04" class="container-fluid">
+<div class="container-fluid">
     <div class="row">
-      <div class="col-md-3" *ngIf="isQLND_03">
-        <div>{{'unit.name' | translate}}</div>
-        <div>
-          <p-dropdown 
-            panelStyleClass="font"
-            [options]="orgList" 
-            [(ngModel)]="organization_id" 
-            optionLabel="name" 
-            optionValue="id" 
-            [filter]="true" 
-            filterBy="name" 
-            ></p-dropdown>
+      <div class="col-md-3">
+        <div>{{'Họ tên' | translate}}</div>
+        <div class="input-line">
+          <input type="text" [(ngModel)]="name" class="input_text"/>
         </div>
       </div>
-      <div class="col-md-3" *ngIf="isQLND_03">
-        <div>{{'unit.email' | translate}}</div>
+      <div class="col-md-3">
+        <div>{{'Email' | translate}}</div>
         <div class="input-line">
           <input type="text" [(ngModel)]="email" class="input_text"/>
         </div>
       </div>
-      <div class="col-md-6 btn_search">
-        <button *ngIf="isQLND_03" class="btn btn-lg btn-block btn_submit" (click)="searchUser()">{{'btn.search' | translate }}</button>
-        <button *ngIf="isQLND_01" class="btn btn-lg btn-block btn_submit" (click)="addUser()">{{'btn.add' | translate }}</button>
+      <div class="col-md-3">
+        <div>{{'Số điện thoại' | translate}}</div>
+        <div class="input-line">
+          <input type="text" [(ngModel)]="phone" class="input_text"/>
+        </div>
+      </div>
+      <div class="col-md-3 btn_search">
+        <button class="btn btn-lg btn-block btn_submit" (click)="searchUser()">{{'btn.search' | translate }}</button>
+        <button class="btn btn-lg btn-block btn_submit" (click)="addUser()">{{'btn.add' | translate }}</button>
       </div>
     </div>
     <div class="row" style="padding-top: 20px;">
@@ -36,15 +34,12 @@
         </ng-template>
         <ng-template pTemplate="body" let-list>
             <tr>
-                <td><a (click)="isQLND_04?detailUser(list.id):null" style="color: #0160AE; cursor: pointer;">{{list.name}}</a></td>
+                <td><a (click)="detailUser(list.id)" style="color: #0160AE; cursor: pointer;">{{list.name}}</a></td>
                 <td>{{list.email}}</td>
                 <td>{{list.phone}}</td>
-                <td>{{list.organization.name}}</td>
-                <td>{{list.status==1?'Hoạt động':'Không hoạt động'}}</td>
-                <td>{{list.role?.name}}</td>
                 <td style="text-align: center">
-                  <img *ngIf="isQLND_02 && list.organization_id == this.organization_id_user_login" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
-                </td>
+                  <img *ngIf="list.organization_id == this.organization_id_user_login" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
+                </td> 
             </tr>
         </ng-template>
         <ng-template pTemplate="paginatorleft" let-state>
@@ -55,9 +50,6 @@
         </ng-template> 
       </p-table>
     </div>
-  </div>
-  <div *ngIf="!isQLND_01 && !isQLND_02 && !isQLND_03 && !isQLND_04">
-    {{'no.role' | translate}}
   </div>
    
     
