--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -3,7 +3,7 @@
     <div class="form-group">
       <div class="label_item">Mẫu hợp đồng <span class="require_star">*</span></div>
       <div [style.background]="action == 'edit' ? '#ddd' : ''">
-        <p-dropdown panelStyleClass="font" [options]="typeListForm" [(ngModel)]="this.datasForm.form_id" optionLabel="name"
+        <p-dropdown panelStyleClass="font" [options]="typeListForm" [(ngModel)]="this.datasForm.template_contract_id" optionLabel="name"
           optionValue="id" placeholder="Chọn hợp đồng" [filter]="true" filterBy="name" [showClear]="true" [disabled]="action == 'edit'"
           (onChange)="OnChangeForm($event)">
         </p-dropdown>
