--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -95,7 +95,8 @@
                         <img src="assets/img/clear.svg" alt="">
                         <img src="assets/img/border-clear.svg" alt="">
                     </div>
-                    <app-sign-contract [datas]="datas" [sign]="d" [signTemplate]="false"></app-sign-contract>
+                    <!-- [signTemplate]="false" -->
+                    <app-sign-contract [datas]="datas" [sign]="d" ></app-sign-contract>
                 </div>
             </div>
         </div>
