--- a/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
@@ -1,1 +1,123 @@
-<p>admin-detail-unit works!</p>
+<div class="container-fluid">
+    <div class="header">
+      <h3 class="label-header">{{this.data.title | translate}}</h3>
+    </div>
+    <div class="content">
+        <div class="label-header">{{'THÔNG TIN CHI TIẾT' | translate}}</div>
+        <div class="row">  
+            <div class="col-md-4">  
+                <div class="label_item">{{'unit.name' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.name" class="input_text"></div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="label_item">{{'unit.code' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.code" class="input_text"></div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="label_item">{{'unit.email' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.email" class="input_text"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="padding-top: 10px;">
+            <div class="col-md-4">
+                <div class="label_item">{{'Mã số thuế' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.tax_code" class="input_text"></div>
+                </div>
+            </div>
+        
+            <div class="col-md-4">
+                <div class="label_item">{{'Chức vụ' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.position" class="input_text"></div>
+                </div>
+            </div>
+            
+            <div class="col-md-4">
+                <div class="label_item">{{'Địa chỉ' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.address" class="input_text"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="padding-top: 10px;">
+            <div class="col-md-4">
+                <div class="label_item">{{'Người đại diện' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.representatives" class="input_text"></div>
+                </div>
+            </div>
+        
+            <div class="col-md-4">
+                <div class="label_item">{{'unit.phone' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.phone" class="input_text"></div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="label_item">{{'unit.fax' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.fax" class="input_text"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="padding-top: 10px;">
+            <div class="col-md-6" style="align-self: center;">
+                <input type="radio" checked style="outline: none;">
+                <span> {{(datas.status==1?'unit.active' : 'unit.inactive') | translate}}</span>
+            </div>
+        </div>
+
+
+        <div class="label-header" style="padding-top: 10px;">{{'THÔNG TIN GÓI DỊCH VỤ' | translate}}</div>
+        <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
+            <ng-template pTemplate="header" let-columns>
+              <tr>
+                  <th *ngFor="let col of cols" [style]='col.style'>
+                    {{col.header | translate}}
+                  </th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-list>
+                <tr>
+                    <td><a style="color: #0160AE; cursor: pointer;">{{list.name}}</a></td>
+                    <td>{{list.code}}</td>
+                    <td>{{list.time}}</td>
+                    <td>{{list.start_time}}</td>
+                    <td>{{list.active==1?'Đang sử dụng':'Hết hạn'}}</td>
+                    <td style="text-align: center">
+                      <img src="../../../assets/img/icon_delete.svg" width="16px" style="cursor: pointer;"/>&nbsp;&nbsp;
+                      <img src="../../../assets/img/icon_detail.svg" width="18px" style="cursor: pointer;"/>
+                    </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="paginatorleft" let-state>
+              <span style="color: white !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
+            </ng-template>
+            <ng-template pTemplate="paginatorright" let-state>
+              <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
+            </ng-template> 
+        </p-table>
+
+        <div class="row" style="justify-content: right;">
+            <button class="btn btn-lg btn-block btn_submit" (click)="addPack(1)">{{'Thêm gói dịch vụ' | translate }}</button>
+        </div>
+
+        <div class="row" style="justify-content: center;padding-top: 10px;">
+            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.close' | translate}}</button>
+        </div>
+    </div>
+  </div>
+  
