--- a/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
+++ b/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
@@ -52,14 +52,13 @@
          style="background-color: #F2F2F2; position: relative;">
       <div id="pdf-viewer-step-3">
         <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
-          <div class="resize-drag not-out-drop"
+          <div class="resize-drag not-out-drop ck-da-keo"
                [id]="d.id"
-               style="z-index: -1;"
+               style="z-index: -1;"  
                #itemElement
                
-               [ngClass]="changeColorDrag(null, d, true)"
                [ngStyle]="changePosition(d)">
-            <div class="name-sig-img-daky">{{(d.name && !d.value) ? d.name : ''}}</div>
+            <div class="name-sig-img-daky">{{d.name}}</div>
             <app-image-sign-contract-template-detail  [datas]="datas" [sign]="d"></app-image-sign-contract-template-detail>
           </div>
         </div>
