--- a/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.html
@@ -3,23 +3,11 @@
       <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" alt="mobifone.contract">
       <span style="color: #106DB6;">{{sign.sign_unit == 'chu_ky_anh' ? 'Chữ ký ảnh' : 'Chữ ký số'}}</span>
     </div>
-    <div class="skeleton-sign"  *ngIf="checkShowEdit && !sign.valueSign">
-      <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" alt="mobifone.contract">
-    </div>
-    <!-- <div *ngIf="sign.valueSign" >
-      <img [src]="sign.valueSign" alt="mobifone.contract" width="100px" height="54px">
-    </div> -->
-  
   </div>
   
-  <div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
-    <!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
-  
+  <div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">  
     <div class="skeleton-sign">
-      <span id="input-text" [ngbTooltip]="sign.value ? sign.value : ''">{{sign.value ? sign.value : ((sign.sign_unit == 'text') ? 'Text' : 'Số hợp đồng')}}</span>
-    </div>
-    <div class="skeleton-sign" *ngIf="checkShowEdit && !sign.valueSign">
-      <input type="text" class="input-edit-text" [(ngModel)]="sign.valueSign" (blur)="doneEditTextSign()" #inputEditText>
+      <span id="input-text">{{(sign.sign_unit == 'text') ? 'Text' : 'Số hợp đồng'}}</span>
     </div>
   </div>
   
