--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -68,12 +68,12 @@
        style="background-color: #F2F2F2; position: relative;">
     <div id="pdf-viewer-step-3">  
       <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
-        <div class="resize-drag not-out-drop ck-da-keo"
+        <div class="resize-drag not-out-drop"
              [id]="d.id"
              style="z-index: -1;"
              #itemElement
              
-             [ngClass]="changeColorDrag(null, true)"
+             [ngClass]="changeColorDrag(null, d)"
              [ngStyle]="changePosition(d)">
           <div class="name-sig-img-daky">{{(d.name && !d.value) ? d.name : ''}}</div>
           <app-image-sign-contract-detail  [datas]="datasBatch" [sign]="d"></app-image-sign-contract-detail>
