--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.html
@@ -36,7 +36,7 @@
                 <td style="text-align: center">
                   <img src="../../../assets/img/icon_edit.svg" width="20px" style="cursor: pointer;"/>&nbsp;&nbsp;
                   <img src="../../../assets/img/icon_delete.svg" width="16px" style="cursor: pointer;"/>&nbsp;&nbsp;
-                  <img src="../../../assets/img/icon_detail.svg" width="18px" style="cursor: pointer;"/>
+                  <img (click)="activeUnit(list.id)" src="../../../assets/img/icon_detail.svg" width="18px" style="cursor: pointer;"/>
                 </td>
             </tr>
         </ng-template>
