--- a/src/app/admin/admin-main/admin-user/admin-delete-user/admin-delete-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-delete-user/admin-delete-user.component.html
@@ -3,11 +3,11 @@
       <h3 class="label-header">{{this.data.title | translate}}</h3>
     </div>
     <div style="font-weight: bold; text-align: center;">
-        <h3 style="font-family: inherit;">{{'Đồng ý kích hoạt tổ chức' | translate}}</h3>
+        <h3 style="font-family: inherit;">{{'Bạn có chắc chắn xóa người dùng này không?' | translate}}</h3>
     </div>
     <div class="row" style="justify-content: center;padding-top: 10px;">
         <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'Hủy' | translate}}</button>
-        <button class="save-button" (click)="onSubmit()">{{'Kích hoạt' | translate}}</button>
+        <button class="save-button" (click)="onSubmit()">{{'Đồng ý' | translate}}</button>
     </div>
 </div>
    
