--- a/src/app/admin/admin-main/admin-user/admin-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-user.component.html
@@ -38,7 +38,8 @@
                 <td>{{list.email}}</td>
                 <td>{{list.phone}}</td>
                 <td style="text-align: center">
-                  <img *ngIf="list.organization_id == this.organization_id_user_login" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
+                  <img src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>&nbsp;&nbsp;
+                  <img src="../../../assets/img/icon_delete.svg" width="16px" (click)="deleteUser(list.id)" style="cursor: pointer;"/>
                 </td> 
             </tr>
         </ng-template>
@@ -49,7 +50,7 @@
           <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
         </ng-template> 
       </p-table>
-    </div>
+    </div>  
   </div>
    
     
