--- a/src/app/admin/admin-main/admin-pack/admin-delete-pack/admin-delete-pack.component.scss
+++ b/src/app/admin/admin-main/admin-pack/admin-delete-pack/admin-delete-pack.component.scss
@@ -18,9 +18,14 @@
     font-size: 13px;
     margin: 0 10px;
 }
-.input_text{
-    background: #EFF2F5;
-    padding: 10px;
+.save-button{
+    border: 0px;
     border-radius: 5px;
-    min-height: 40px;
-  }
+    height: 33px;
+    width: 100px;
+    box-sizing: border-box;
+    color: white;
+    background-color: #106DB6;
+    font-size: 13px;
+    margin: 0 10px;
+}
