--- a/src/app/admin/admin-main/admin-pack/admin-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-pack.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-    <div class="row">
+    <div class="col-md-12">
       <div class="input-line search">
         <img src="../../assets/img/icon_search.svg" class="input-img" />
-        <input type="text" id="filter_name" [value]="filter_name" class="input-text" placeholder="{{'contract.search.name.placeholder' | translate}}"
+        <input type="text" id="filter_name" [value]="filter_name" class="input-text" placeholder="{{'Nhập từ khóa tím kiếm theo tên gói dịch vụ' | translate}}"
         (keyup)="autoSearch($event)" />
         <img src="../../assets/img/icon_search_group.svg" class="input-img"  (click)="search()"/>
       </div>
