--- a/src/app/admin/admin-main/admin-pack/dialog/admin-filter-pack/admin-filter-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/dialog/admin-filter-pack/admin-filter-pack.component.html
@@ -4,61 +4,54 @@
     </div>
     <form [formGroup]="addForm" class="content">
         <div class="row">
-            <div class="col-md-6">
-                <div class="label text-color">Loại hợp đồng</div>
-                <div>
-                    <p-dropdown 
-                        panelStyleClass="font"
-                        appendTo="body"
-                        [options]="contractTypeList" 
-                        formControlName="filter_type" 
-                        optionLabel="name" 
-                        optionValue="id" 
-                        placeholder="Chọn loại hợp đồng" 
-                        [filter]="true" 
-                        filterBy="name" 
-                        [showClear]="true"  
-                        ></p-dropdown>
-                </div>
-            </div>
-        
-            <div class="col-md-6">
-                <div class="label text-color">Số hợp đồng</div>
+            <div class="col-md-12">
+                <div class="label text-color">Mã gói</div>
                 <div class="input-data">
-                    <input type="text" formControlName="filter_contract_no">
+                    <input type="text" formControlName="filter_code">
                 </div>
             </div>
         </div>
 
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
-                <div class="label text-color">Từ ngày (ngày tạo)</div>
-                <div>
-                    <p-calendar formControlName="filter_from_date" [showIcon]="true" dateFormat="dd/mm/yy" appendTo="body"></p-calendar>
+                <div class="label text-color">Đơn giá</div>
+                <div class="input-data">
+                    <input type="text" formControlName="filter_price">
                 </div>
             </div>
         
             <div class="col-md-6">
-                <div class="label text-color">Đến ngày (ngày tạo)</div>
-                <div>
-                    <p-calendar formControlName="filter_to_date" [showIcon]="true" dateFormat="dd/mm/yy" appendTo="body"></p-calendar>
+                <div class="label text-color">Thời gian</div>
+                <div class="input-data">
+                    <input type="text" formControlName="filter_time">
                 </div>
             </div>
         </div>
 
-        <div class="row" style="padding-top: 10px;" *ngIf="isOrg=='on'">
-            <div class="col-md-12">
-                <div class="label text-color">Tổ chức</div>
-                <p-dropdown    
-                panelStyleClass="font"
-                appendTo="body"
-                [options]="orgList" 
-                formControlName="organization_id" 
-                optionLabel="name" 
-                optionValue="id" 
-                [filter]="true" 
-                filterBy="name" 
-                ></p-dropdown>
+        <div class="row" style="padding-top: 10px;">
+            <div class="col-md-6">
+                <div class="label text-color">Trạng thái</div>
+                <div>
+                    <p-dropdown 
+                        panelStyleClass="font"
+                        appendTo="body"
+                        [options]="statusList" 
+                        formControlName="filter_status" 
+                        optionLabel="name" 
+                        optionValue="id" 
+                        placeholder="Chọn trạng thái" 
+                        [filter]="true" 
+                        filterBy="name" 
+                        [showClear]="true"  
+                        ></p-dropdown>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="label text-color">Số hợp đồng</div>
+                <div class="input-data">
+                    <input type="text" formControlName="filter_number_contract">
+                </div>
             </div>
         </div>
     
