--- a/src/app/admin/admin-main/admin-user/admin-detail-user/admin-detail-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-detail-user/admin-detail-user.component.html
@@ -1,1 +1,43 @@
-<p>admin-detail-user works!</p>
+<div class="container-fluid">
+    <div class="header">
+      <h3 class="label-header">{{this.data.title | translate}}</h3>
+    </div>
+    <div class="content">
+        <div class="row">  
+            <div class="col-md-6">  
+                <div class="label_item">{{'Họ tên' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.name" class="input_text"></div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="label_item">{{'Email' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.email" class="input_text"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="padding-top: 10px;">
+            <div class="col-md-6">
+                <div class="label_item">{{'Số điện thoại' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.phone" class="input_text"></div>
+                </div>
+            </div>
+        
+            <div class="col-md-6">
+                <div class="label_item">{{'Phân quyền' | translate }}</div>
+                <div>
+                    <div [innerHTML]="datas.position" class="input_text"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="justify-content: center;padding-top: 10px;">
+            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.close' | translate}}</button>
+        </div>
+    </div>
+  </div>
+  
