--- a/src/app/admin/admin-main/admin-pack/admin-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-pack.component.html
@@ -2,12 +2,15 @@
     <div class="col-md-12">
       <div class="input-line search">
         <img src="../../assets/img/icon_search.svg" class="input-img" />
-        <input type="text" id="filter_name" [value]="filter_name" class="input-text" placeholder="{{'Nhập từ khóa tím kiếm theo tên gói dịch vụ' | translate}}"
+        <input type="text" id="filter_name" [value]="filter_name" class="input-text" placeholder="{{'Nhập từ khóa tìm kiếm theo tên gói dịch vụ' | translate}}"
         (keyup)="autoSearch($event)" />
         <img src="../../assets/img/icon_search_group.svg" class="input-img"  (click)="search()"/>
       </div>
+    </div>
+    <div class="col-md-12 btn_search">
+      <button class="btn btn-lg btn-block btn_submit" (click)="addPack()">{{'btn.add' | translate }}</button>
     </div>  
-    <div class="row" style="padding-top: 20px;">
+    <div class="row" style="padding-top: 10px;">
       <p-table [value]="listData" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
         <ng-template pTemplate="header" let-columns>
           <tr>
