--- a/src/app/admin/admin-main/admin-pack/admin-pack.component.scss
+++ b/src/app/admin/admin-main/admin-pack/admin-pack.component.scss
@@ -6,7 +6,6 @@
     color: white;
     background-color: #106DB6;
     font-size: 13px;
-    margin: 0 10px;
 }
 .input_text {
     padding-left: 10px;
@@ -18,6 +17,7 @@
 }
 .btn_search{
     align-self: flex-end;
+    padding-top: 10px;
 }
 
 #table {
