--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -5,14 +5,15 @@
 </div>
 
 <!-- && !signTemplate -->
-<div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'"> 
+<div class="text-sign" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && !signTemplate">
   <span id="input-text">{{getText(sign)}}</span>
 </div>
 
-<!-- <div class="text-sign" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && signTemplate">
-  <span *ngIf="!sign.is_have_text" id="input-text">{{getText(sign)}}</span> 
+<div class="text-sign" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && signTemplate">
+  <span *ngIf="!sign.is_have_text" id="input-text">{{getText(sign)}}</span>
   <input *ngIf="sign.sign_unit == 'text' && sign.is_have_text" id="input-text-value" placeholder="Nhập nội dung Text.."
     [(ngModel)]="sign.value" type="text" (ngxInputSearch)="doTheSearch($event)">
- <input *ngIf="sign.sign_unit == 'so_tai_lieu' && !sign.recipient_id" id="input-number-value" (focusout)="focusOutFunction()" [(ngModel)]="sign.value"
-    placeholder="Nhập số hợp đồng.." type="text" (ngxInputSearch)="doTheSearch($event)"> -->
-<!-- </div> -->
+  <input *ngIf="sign.sign_unit == 'so_tai_lieu' && !sign.recipient_id" id="input-number-value"
+    (focusout)="focusOutFunction()" [(ngModel)]="sign.value" placeholder="Nhập số hợp đồng.." type="text"
+    (ngxInputSearch)="doTheSearch($event)">
+</div>
