--- a/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/infor-contract/infor-contract.component.html
@@ -98,7 +98,7 @@
         <div class="form-group">
           <div class="label_item">{{'effective-start-date' | translate}} <span class="require_star">*</span></div>
           <div>
-            <p-calendar [(ngModel)]="start_time" [disabled]="this.datas.isEdit" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true" dateFormat="dd/mm/yy" (onSelect)="startTimeRequired();"></p-calendar>
+            <p-calendar [(ngModel)]="start_time" [disabled]="this.datas.isEdit" [showIcon]="true" [readonlyInput]="true" dateFormat="dd/mm/yy" (onSelect)="startTimeRequired();"></p-calendar>
           </div>
         </div>
         <div class="form-group">
