--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.html
@@ -31,7 +31,7 @@
                 <td><a style="color: #0160AE; cursor: pointer;" (click)="detailUnit(list.id)">{{list.name}}</a></td>
                 <td>{{list.code}}</td>
                 <td>{{list.phone}}</td>
-                <td><a *ngIf="list.active!=1" (click)="activeUnit(list.id)" style="color: #0160AE; cursor: pointer;">{{'Chưa kích hoạt' | translate}}</a>
+                <td><a *ngIf="list.active!=1" (click)="activeUnit(list.id)" style="color: #0160AE; cursor: pointer;text-decoration: none;">{{'Chưa kích hoạt' | translate}}</a>
                   <a *ngIf="list.active==1">{{'Đã kích hoạt' | translate}}</a>
                 </td>
                 <td>{{list.email}}</td>
