--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -25,7 +25,7 @@
       <div class="col-md-4">
       <div class="label text-color">{{'user.birthday' | translate}}</div>
       <div>
-        <p-calendar formControlName="birthday" [showIcon]="true" dateFormat="dd/mm/yy" [readonlyInput]="true"></p-calendar>
+        <p-calendar formControlName="birthday" [maxDate]="maxDate" [showIcon]="true" dateFormat="dd/mm/yy" [readonlyInput]="true"></p-calendar>
       </div>
       </div>
     </div>
